代码初始化

--- a/.gitignore
+++ b/.gitignore
@@ -1,59 +1,17 @@
+#ºöÂÔÎÄ¼ş
+*.iml
+/database/
 
-.metadata
-bin/
-tmp/
-*.tmp
-*.bak
-*.swp
-*~.nib
-local.properties
-.settings
-.loadpath
-.recommenders
-.classpath
+#ºöÂÔÅäÖÃ
+.idea
 .project
-.class
-
-# External tool builders
-.externalToolBuilders/
-
-# Locally stored "Eclipse launch configurations"
-*.launch
-
-# PyDev specific (Python IDE for Eclipse)
-*.pydevproject
-
-# CDT-specific (C/C++ Development Tooling)
-.cproject
-
-# CDT- autotools
-.autotools
-
-# Java annotation processor (APT)
+.settings
+.classpath
 .factorypath
-
-# PDT-specific (PHP Development Tools)
-.buildpath
-
-# sbteclipse plugin
-.target
-
-# Tern plugin
-.tern-project
-
-# TeXlipse plugin
-.texlipse
-
-# STS (Spring Tool Suite)
 .springBeans
+.apt_generated
+.apt_generated_tests
 
-# Code Recommenders
-.recommenders/
-
-# Annotation Processing
-.apt_generated/
-
-# Scala IDE specific (Scala & Java development for Eclipse)
-.cache-main
-.scala_dependencies
-.worksheet
+#ºöÂÔÄ¿Â¼
+**/logs/
+**/target/
