--- a/src/main/resources/application-database.properties
+++ b/src/main/resources/application-database.properties
@@ -8,7 +8,7 @@ spring.jpa.hibernate.ddl-auto=update
 # jdbc:h2:file 硬盘持久化（单连接）
 # jdbc:h2:tcp://IP/database TCP连接
 # jdbc:h2:mem:database 内存（项目关闭后会消失）
-spring.datasource.url=jdbc:h2:./database/acgist-killer
+spring.datasource.url=jdbc:h2:./database/snail
 spring.datasource.driver-class-name=org.h2.Driver
 #初始化脚本
 #spring.datasource.data=classpath:db/data.sql
