--- a/src/main/resources/system-config.properties
+++ b/src/main/resources/system-config.properties
@@ -1,5 +1,5 @@
 #系统配置
 #官网与源码
-acgist.system.source=https://gitee.com/acgist/acgist-killer
+acgist.system.source=https://gitee.com/acgist/snail
 #问题与建议
-acgist.system.support=https://gitee.com/acgist/acgist-killer/issues
+acgist.system.support=https://gitee.com/acgist/snail/issues
