--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-logging.config=classpath:logback-acgist-killer.xml
+logging.config=classpath:logback-snail.xml
 spring.profiles.active=config,database
-spring.application.name=acgist-killer
+spring.application.name=snail
