--- a/src/main/resources/config/config.system.properties
+++ b/src/main/resources/config/config.system.properties
@@ -1,7 +1,12 @@
 #系统配置
+acgist.system.name=蜗牛
 #作者
 acgist.system.author=https://www.acgist.com/about
 #官网与源码
 acgist.system.source=https://gitee.com/acgist/snail
 #问题与建议
 acgist.system.support=https://gitee.com/acgist/snail/issues
+#服务端口
+acgist.server.port=28888
+#服务地址
+acgist.server.host=localhost
