--- a/pom.xml
+++ b/pom.xml
@@ -19,9 +19,12 @@
 		<junit.version>4.12</junit.version>
 		<lang3.version>3.8.1</lang3.version>
 		<slf4j.version>1.7.25</slf4j.version>
-		<javafx.version>11.0.2</javafx.version>
 		<logback.version>1.2.3</logback.version>
 		<jackson.version>2.9.5</jackson.version>
+		<!--
+		<javafx.version>11.0.2</javafx.version>
+		-->
+		<javafx.version>12-ea+13</javafx.version>
 		<maven.jar.version>3.1.1</maven.jar.version>
 		<maven.compiler.version>3.8.0</maven.compiler.version>
 		<maven.dependency.version>3.1.1</maven.dependency.version>
