--- a/src/main/resources/config/config.database.properties
+++ b/src/main/resources/config/config.database.properties
@@ -2,8 +2,8 @@
 # jdbc:h2:file 硬盘持久化（单连接）
 # jdbc:h2:tcp://IP/database TCP连接
 # jdbc:h2:mem:database 内存（项目关闭后会消失）
-database.h2.url=jdbc:h2:./database/snail
-database.h2.driver=org.h2.Driver
-database.h2.user=sa
-database.h2.password=
-database.h2.table.sql=/database/table.sql
+acgist.database.h2.url=jdbc:h2:./database/snail
+acgist.database.h2.driver=org.h2.Driver
+acgist.database.h2.user=sa
+acgist.database.h2.password=
+acgist.database.h2.table.sql=/database/table.sql
