主界面按钮：开始、暂停、删除

--- a/src/main/resources/config/config.system.properties
+++ b/src/main/resources/config/config.system.properties
@@ -1,5 +1,8 @@
 #系统配置
+#系统信息
 acgist.system.name=蜗牛
+acgist.system.name.en=Snail
+acgist.system.version=1.0.0
 #作者
 acgist.system.author=https://www.acgist.com/about
 #官网与源码
