启动初始化

--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,7 @@
 	</dependencies>
 
 	<build>
+		<!-- launch4j-maven-plugin -->
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
