添加系统下载速度、优化HTTP下载时错误地址的提示

--- a/src/main/resources/config/config.download.properties
+++ b/src/main/resources/config/config.download.properties
@@ -1,13 +1,15 @@
 #用户配置
-#下载路径
+#下载目录
 acgist.download.path=/download
-#同时下载任务数量
+#下载任务数量
 acgist.download.size=4
-#单个任务下载速度（KB）
+#下载速度（单个）（KB）
 acgist.download.buffer=1024
-#下载完成弹出提示
+#磁盘缓存（单个）（MB）
+acgist.download.memory.buffer=16
+#消息提示
 acgist.download.notice=true
 #启用P2P加速
 acgist.download.p2p=true
-#最后一次选择文件目录
+#最后一次选择目录
 acgist.download.last.path=
