--- a/src/main/resources/config/config.system.properties
+++ b/src/main/resources/config/config.system.properties
@@ -9,7 +9,11 @@ acgist.system.author=https://www.acgist.com/about
 acgist.system.source=https://gitee.com/acgist/snail
 #问题与建议
 acgist.system.support=https://gitee.com/acgist/snail/issues
-#服务端口
-acgist.server.port=28888
+#系统服务端口（AplicationServer）
+acgist.server.port=16888
+#Peer服务端口（PeerServer）
+acgist.peer.server.port=17888
+#DHT服务端口（DhtServer）
+acgist.server.port=18888
 #服务地址
 acgist.server.host=localhost
