--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 		<encoding>UTF-8</encoding>
 		<os.name>win</os.name><!-- 系统名称：win、mac、linux -->
 		<java.version>11</java.version>
-		<h2.version>1.4.199</h2.version><!-- TODO：1.4.199这个版本很慢，但是支持模块化，暂时忍受一下 -->
+		<h2.version>1.4.199</h2.version>
 		<javafx.version>12</javafx.version>
 		<junit.version>4.12</junit.version>
 		<slf4j.version>1.7.26</slf4j.version>
