--- a/src/main/resources/config/config.system.properties
+++ b/src/main/resources/config/config.system.properties
@@ -11,9 +11,9 @@ acgist.system.source=https://gitee.com/acgist/snail
 acgist.system.support=https://gitee.com/acgist/snail/issues
 #系统服务端口（AplicationServer）
 acgist.server.port=16888
-#Peer服务端口（PeerServer）
-acgist.peer.server.port=17888
-#DHT服务端口（DhtServer）
-acgist.server.port=18888
 #服务地址
 acgist.server.host=localhost
+#Peer服务端口（PeerServer）
+acgist.peer.port=17888
+#DHT服务端口（DhtServer）
+acgist.dht.port=18888
