系统日志缓存优化

--- a/src/main/resources/config/config.system.properties
+++ b/src/main/resources/config/config.system.properties
@@ -17,3 +17,9 @@ acgist.server.host=localhost
 acgist.peer.port=17888
 #DHT服务端口（DhtServer）
 acgist.dht.port=18888
+#单个任务tracker数量
+acgist.tracker.size=50
+#单个任务Peer数量
+acgist.peer.size=10
+#单个任务Peer优化周期（秒）
+acgist.peer.optimize.interval=60
