--- a/src/main/resources/config/config.system.properties
+++ b/src/main/resources/config/config.system.properties
@@ -19,6 +19,8 @@ acgist.peer.port=17888
 acgist.dht.port=18888
 #单个任务tracker数量
 acgist.tracker.size=50
+#tracker连续失败次数（超过被废弃）
+acgist.tracker.max.fail.times=3
 #单个任务Peer数量
 acgist.peer.size=10
 #单个任务Peer优化周期（秒）
