--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 		<h2.version>1.4.199</h2.version>
 		<javafx.version>12</javafx.version>
 		<junit.version>4.12</junit.version>
-		<slf4j.version>1.8.0-beta4</slf4j.version>
+		<slf4j.version>1.8.0-alpha2</slf4j.version>
 		<logback.version>1.3.0-alpha4</logback.version>
 		<jackson.version>2.9.8</jackson.version>
 		<maven.jar.version>3.1.1</maven.jar.version>
