文件下载处理

--- a/src/main/resources/config/config.system.properties
+++ b/src/main/resources/config/config.system.properties
@@ -25,3 +25,5 @@ acgist.tracker.max.fail.times=3
 acgist.peer.size=10
 #单个任务Peer优化周期（秒）
 acgist.peer.optimize.interval=60
+#同时下载的Peer数量
+acgist.peer.download.size=10
