--- a/pom.xml
+++ b/pom.xml
@@ -13,24 +13,31 @@
 	<description>基于JAVA/JAVAFX的下载工具，支持下载协议：BT、FTP、HTTP、ED2K。</description>
 
 	<properties>
+		<!-- 配置 -->
 		<vendor>acgist</vendor>
 		<module>${project.groupId}.${project.artifactId}</module>
 		<encoding>UTF-8</encoding>
-		<os.name>win</os.name><!-- 系统名称：win、mac、linux -->
+		<!-- 系统：win、mac、linux -->
+		<os.name>win</os.name>
+		<!-- Java -->
 		<java.version>11</java.version>
+		<!-- JUnit -->
+		<junit.version>4.12</junit.version>
+		<!-- 依赖 -->
 		<h2.version>1.4.199</h2.version>
 		<javafx.version>12</javafx.version>
-		<junit.version>4.12</junit.version>
 		<slf4j.version>1.8.0-alpha2</slf4j.version>
 		<logback.version>1.3.0-alpha4</logback.version>
 		<jackson.version>2.9.8</jackson.version>
+		<!-- MAVEN插件 -->
 		<maven.jar.version>3.1.1</maven.jar.version>
 		<maven.source.version>3.0.1</maven.source.version>
 		<maven.javadoc.version>3.1.0</maven.javadoc.version>
 		<maven.compiler.version>3.8.0</maven.compiler.version>
 		<maven.resources.version>3.1.0</maven.resources.version>
 		<maven.dependency.version>3.1.1</maven.dependency.version>
-		<project.build.sourceEncoding>${encoding}</project.build.sourceEncoding><!-- 资源文件编码 -->
+		<!-- 资源文件编码 -->
+		<project.build.sourceEncoding>${encoding}</project.build.sourceEncoding>
 	</properties>
 
 	<dependencies>
