--- a/SnailLauncher/src/SnailLauncher.rc
+++ b/SnailLauncher/src/SnailLauncher.rc
@@ -76,8 +76,8 @@ IDR_MAINFRAME           ICON                    "res\\SnailLauncher.ico"
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 1,0,1,0
- PRODUCTVERSION 1,0,1,0
+ FILEVERSION 1,0,0,0
+ PRODUCTVERSION 1,0,0,0
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -94,12 +94,12 @@ BEGIN
         BEGIN
             VALUE "CompanyName", "acgist"
             VALUE "FileDescription", "ÎÏÅ£"
-            VALUE "FileVersion", "1.0.1.0"
+            VALUE "FileVersion", "1.0.0.0"
             VALUE "InternalName", "SnailLauncher.exe"
-            VALUE "LegalCopyright", "(C) www.acgist.com"
+            VALUE "LegalCopyright", "Copyright (C) 2019 ACGIST.COM. All Rights Reserved."
             VALUE "OriginalFilename", "SnailLauncher.exe"
             VALUE "ProductName", "ÎÏÅ££¨Snail£©Æô¶¯Æ÷"
-            VALUE "ProductVersion", "1.0.1.0"
+            VALUE "ProductVersion", "1.0.0.0"
         END
     END
     BLOCK "VarFileInfo"
