--- a/SnailLauncher/src/snail.ini
+++ b/SnailLauncher/src/snail.ini
@@ -2,6 +2,7 @@
 model=-server
 xms=-Xms256M
 xmx=-Xmx256M
+java.path=./java/bin
 file.encoding=-Dfile.encoding=UTF-8
-jar.file.path=-Djava.class.path=./snail-1.0.1.jar
 jvm.file.path=./java/bin/server/jvm.dll
+jar.file.path=-Djava.class.path=./snail-1.0.1.jar
