--- a/src/main/resources/config/system.properties
+++ b/src/main/resources/config/system.properties
@@ -2,7 +2,7 @@
 #系统信息
 acgist.system.name=蜗牛
 acgist.system.name.en=Snail
-acgist.system.version=1.0.1
+acgist.system.version=1.0.2
 #作者
 acgist.system.author=https://www.acgist.com/about
 #官网与源码
@@ -21,6 +21,8 @@ acgist.tracker.size=50
 acgist.tracker.max.fail.times=2
 #单个任务Peer数量
 acgist.peer.size=10
+#DHT执行周期（秒）
+acgist.dht.interval=60
 #单个任务Peer优化周期（秒）
 acgist.peer.optimize.interval=10
 #同时下载的Peer数量
