--- a/src/main/resources/config/system.properties
+++ b/src/main/resources/config/system.properties
@@ -21,6 +21,8 @@ acgist.tracker.size=50
 acgist.tracker.max.fail.times=2
 #单个任务Peer数量
 acgist.peer.size=10
+#PEX执行周期（秒）
+acgist.pex.interval=120
 #DHT执行周期（秒）
 acgist.dht.interval=60
 #单个任务Peer优化周期（秒）
