优化piece选择，如果任务已经接近完成状态时，可以选择下载中的Piece进行下载，防止最后一个Piece导致整个任务下载一致处于等待状态。

--- a/src/main/resources/config/system.properties
+++ b/src/main/resources/config/system.properties
@@ -29,3 +29,5 @@ acgist.dht.interval=60
 acgist.peer.optimize.interval=10
 #同时下载的Peer数量
 acgist.peer.download.size=10
+#任务即将完成时可以重复选择下载的剩下Piece数量
+acgist.piece.repeat.size=4
