优化DHT/PEER/UTP端口使用同一个

--- a/src/main/resources/config/system.properties
+++ b/src/main/resources/config/system.properties
@@ -9,12 +9,10 @@ acgist.system.author=https://www.acgist.com/about
 acgist.system.source=https://gitee.com/acgist/snail
 #问题与建议
 acgist.system.support=https://gitee.com/acgist/snail/issues
-#系统服务端口（AplicationServer）
+#系统端口（AplicationServer）
 acgist.server.port=16888
-#Peer服务端口（PeerServer）
-acgist.peer.port=17888
-#DHT服务端口（DhtServer）
-acgist.dht.port=18888
+#服务端口（Peer、DHT、UTP）
+acgist.service.port=18888
 #单个任务tracker数量
 acgist.tracker.size=50
 #单个任务Peer数量
