优化配置，优化组播不能接收问题

--- a/src/main/resources/config/system.properties
+++ b/src/main/resources/config/system.properties
@@ -1,29 +1,33 @@
-#系统配置
-#系统信息
+#===============基本===============
+#名称
 acgist.system.name=蜗牛
+#英文名称
 acgist.system.name.en=Snail
+#版本
 acgist.system.version=1.1.0
+#===============链接===============
 #作者
 acgist.system.author=https://www.acgist.com/about
 #官网与源码
 acgist.system.source=https://gitee.com/acgist/snail
 #问题与建议
 acgist.system.support=https://gitee.com/acgist/snail/issues
+#===============端口===============
 #系统端口（AplicationServer）
 acgist.server.port=16888
 #服务端口（Peer、DHT、UTP）
 acgist.service.port=18888
-#单个任务tracker数量
-acgist.tracker.size=50
+#===============数量===============
 #单个任务Peer数量
 acgist.peer.size=10
-#PEX执行周期（秒）
-acgist.pex.interval=240
-#DHT执行周期（秒）
-acgist.dht.interval=60
-#单个任务Peer优化周期（秒）
-acgist.peer.optimize.interval=10
-#同时下载的Peer数量
-acgist.peer.download.size=10
+#单个任务tracker数量
+acgist.tracker.size=50
 #任务即将完成时可以重复选择下载的剩下Piece数量
 acgist.piece.repeat.size=4
+#===============周期===============
+#DHT执行周期（秒）
+acgist.dht.interval=120
+#PEX执行周期（秒）
+acgist.pex.interval=240
+#单个任务Peer优化周期（秒）
+acgist.peer.optimize.interval=10
