--- a/src/main/resources/config/tracker.properties
+++ b/src/main/resources/config/tracker.properties
@@ -1,3 +1,4 @@
-# 默认Tracker列表：（UDP/HTTP）：默认优先使用tracker.user.properties
+#默认Tracker列表：（UDP/HTTP），默认优先使用tracker.user.properties。
+#格式：index=announceUrl
 0001=udp://tracker.uw0.xyz:6969/announce
 0002=udp://exodus.desync.com:6969/announce
