--- a/src/main/resources/config/database.properties
+++ b/src/main/resources/config/database.properties
@@ -1,9 +1,14 @@
 #数据库配置
-# jdbc:h2:file 硬盘持久化（单连接）
-# jdbc:h2:tcp://IP/database TCP连接
-# jdbc:h2:mem:database 内存（项目关闭后会消失）
+#数据库文件：
+# 文件（单连接）：jdbc:h2:file
+# TCP连接：jdbc:h2:tcp://IP/database
+# 内存（不能持久化）：jdbc:h2:mem:database
 acgist.database.h2.url=jdbc:h2:./database/snail
+#驱动
 acgist.database.h2.driver=org.h2.Driver
+#用户账号
 acgist.database.h2.user=sa
+#用户密码
 acgist.database.h2.password=
+#初始化SQL
 acgist.database.h2.table.sql=/database/table.sql
