--- a/src/main/resources/config/dht.properties
+++ b/src/main/resources/config/dht.properties
@@ -1,3 +1,4 @@
-# 默认DHT（nodes）列表：默认优先使用dht.user.properties
+#默认DHT（nodes）列表，默认优先使用dht.user.properties。
+#格式：host=port
 router.utorrent.com=6881
 router.bittorrent.com=6881
