--- a/src/main/resources/config/system.properties
+++ b/src/main/resources/config/system.properties
@@ -15,8 +15,8 @@ acgist.system.support=https://gitee.com/acgist/snail/issues
 #===============端口===============
 #系统端口（AplicationServer）
 acgist.server.port=16888
-#服务端口（Peer、DHT、UTP）
-acgist.service.port=18888
+#BT服务端口（Peer、DHT、UTP）
+acgist.bt.port=18888
 #===============数量===============
 #单个任务Peer数量
 acgist.peer.size=10
