--- a/src/main/resources/config/system.properties
+++ b/src/main/resources/config/system.properties
@@ -29,5 +29,7 @@ acgist.piece.repeat.size=4
 acgist.dht.interval=60
 #PEX执行周期（秒）
 acgist.pex.interval=120
+#Tracker执行周期（秒）
+acgist.tracker.interval=60
 #单个任务Peer优化周期（秒）
 acgist.peer.optimize.interval=30
