--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 	<artifactId>snail</artifactId>
 	
 	<url>https://gitee.com/acgist/snail</url>
+	
 	<name>snail</name>
 	<version>1.1.0</version>
 	<description>基于Java、JavaFX开发的下载工具，支持下载协议：BT、FTP、HTTP。</description>
@@ -24,13 +25,14 @@
 		<os.name>win</os.name>
 		<!-- Java -->
 		<java.version>11</java.version>
-		<!-- JUnit -->
-		<junit.version>4.12</junit.version>
+		<!-- JavaFX -->
+		<javafx.version>11.0.2</javafx.version>
 		<!-- 依赖 -->
 		<h2.version>1.4.199</h2.version>
-		<javafx.version>11.0.2</javafx.version>
 		<slf4j.version>1.8.0-alpha2</slf4j.version>
 		<logback.version>1.3.0-alpha4</logback.version>
+		<!-- JUnit -->
+		<junit.version>4.12</junit.version>
 		<!-- Maven插件 -->
 		<maven.jar.version>3.1.1</maven.jar.version>
 		<maven.source.version>3.0.1</maven.source.version>
@@ -38,7 +40,7 @@
 		<maven.compiler.version>3.8.0</maven.compiler.version>
 		<maven.resources.version>3.1.0</maven.resources.version>
 		<maven.dependency.version>3.1.1</maven.dependency.version>
-		<!-- 资源文件编码 -->
+		<!-- 文件编码 -->
 		<project.build.sourceEncoding>${encoding}</project.build.sourceEncoding>
 	</properties>
 
@@ -46,13 +48,13 @@
 		<!-- GUI：JavaFX -->
 		<dependency>
 			<groupId>org.openjfx</groupId>
-			<artifactId>javafx-fxml</artifactId>
+			<artifactId>javafx-base</artifactId>
 			<version>${javafx.version}</version>
 			<classifier>${os.name}</classifier>
 		</dependency>
 		<dependency>
 			<groupId>org.openjfx</groupId>
-			<artifactId>javafx-base</artifactId>
+			<artifactId>javafx-fxml</artifactId>
 			<version>${javafx.version}</version>
 			<classifier>${os.name}</classifier>
 		</dependency>
@@ -104,9 +106,8 @@
 	<profiles>
 		<profile>
 			<id>develop</id>
-			<!-- 设置默认 -->
 			<activation>
-				<!-- 如果配置JDK标签会导致环境配置失效 -->
+				<!-- 设置默认 -->
 				<activeByDefault>true</activeByDefault>
 			</activation>
 			<properties>
@@ -137,14 +138,17 @@
 			</resource>
 			<resource>
 				<directory></directory>
-				<targetPath>META-INF/</targetPath>
 				<filtering>false</filtering>
+				<targetPath>META-INF/</targetPath>
 				<includes>
 					<include>LICENSE</include>
 					<include>README.md</include>
 				</includes>
 			</resource>
 		</resources>
+		<!--
+		<filters></filters>
+		-->
 		<!-- 插件 -->
 		<plugins>
 			<!-- 编译代码 -->
