--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	
 	<name>snail</name>
 	<version>1.1.0</version>
-	<description>基于Java、JavaFX开发的下载工具，支持下载协议：BT、FTP、HTTP。</description>
+	<description>基于Java、JavaFX开发的下载工具，支持下载协议：BT（BitTorrent）、FTP、HTTP。</description>
 	<inceptionYear>2019</inceptionYear>
 
 	<properties>
